# STOP

./: .gitignore  CMakeLists.txt  Makefile  README.md  main  strands
src/: main.cpp
src/board/: board.cpp  board.h
src/board/colors/: colors.h
src/node/: node.h
src/solver/: solver.cpp  solver.h
src/trie/: trie.cpp  trie.h
